tests/assembler/pass/test5.ial
type Arrays
{
    field int32[] ints;
    field float32[] floats;
}
