tests/assembler/fail/test7.ial
type automatic Test7
{
    field int32 missingStorageSpecifier;
}
